<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.toqueyann.diabete.MainActivity">

    <TextView
        android:text="@string/tvChoixProtocole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:id="@+id/textView" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnAfficher"
        android:layout_toEndOf="@+id/btnAfficher"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="11dp"
        android:id="@+id/tvInsuline"
        android:text="@string/app_name" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginStart="11dp"
        android:layout_marginTop="17dp" >

        <RadioButton
        android:text="@string/rd_Protocole1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:id="@+id/rdbProtocole1"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/radioGroup9"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/rd_Protocole2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdbProtocole2"

            android:layout_below="@+id/rdbProtocole1"
            android:layout_alignStart="@+id/rdbProtocole1"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:text="@string/tvGlycemie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_toEndOf="@+id/btnAfficher"
        android:layout_marginStart="26dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtGly"
        android:layout_alignTop="@+id/radioGroup3"
        android:layout_toEndOf="@+id/btnAfficher"
        android:layout_marginStart="11dp"
        android:layout_marginTop="34dp"
        android:hint="@string/edtGlycemie"
        android:visibility="invisible" />

    <Button
        android:text="@string/btnAfficherInsuline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAfficher"
        android:layout_marginTop="158dp"

        android:layout_below="@+id/radioGroup3"
        android:layout_alignStart="@+id/radioGroup3" />

    <TextView
        android:text="@string/tvNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/radioGroup3"
        android:id="@+id/textView3"
        android:visibility="invisible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtNom"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginStart="19dp"
        android:visibility="invisible" />

    <TextView
        android:text="@string/tvPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNom"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/textView4"
        android:visibility="invisible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/edtNom"
        android:layout_toEndOf="@+id/textView"
        android:id="@+id/edtPrenom"
        android:visibility="invisible" />

    <Button
        android:text="@string/btnAjouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPrenom"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:id="@+id/btnAjouter"
        android:visibility="invisible" />

    <Button
        android:text="@string/btnSignaler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignaler"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtGlycemie"
        android:hint="@string/edtGlycemie"
        android:layout_alignBaseline="@+id/edtGly"
        android:layout_alignBottom="@+id/edtGly"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/edtGly" />


</RelativeLayout>
